plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.12'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.mindhub'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

bootRun {
	sourceResources sourceSets.main
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'org.apache.pdfbox:pdfbox:2.0.25'
//	implementation 'org.postgresql:postgresql'
//	implementation group: 'com.lowagie', name: 'itext', version: '2.1.7'
//	implementation group: 'com.github.librepdf', name: 'openpdf', version: '1.3.26'
}

tasks.named('test') {
	useJUnitPlatform()
}